eks_node_grp.tf
# resource "aws_instance" "kubectl-server" {
#   ami                         = "ami-086cae3329a3f7d75"
#   key_name                    = "kubectl-pem"
#   instance_type               = "t2.micro"
#   associate_public_ip_address = true
#   subnet_id                   = aws_subnet.public-eks-subnet-1.id
#   vpc_security_group_ids      = [aws_security_group.allow_tls.id]

#   tags = {
#     Name = "kubectl"
#   }
# }

resource "aws_eks_node_group" "node-grp" {
  cluster_name    = aws_eks_cluster.eks.name
  node_group_name = "pc-node-group"
  node_role_arn   = aws_iam_role.worker-role.arn
  subnet_ids      = [aws_subnet.public-eks-subnet-1.id, aws_subnet.public-eks-subnet-2.id]
  capacity_type   = "ON_DEMAND"
  disk_size       = "20"
  instance_types  = ["t3.medium"]

  remote_access {
    ec2_ssh_key               = "eks-worker-pem"
    source_security_group_ids = [aws_security_group.allow_tls.id]
  }

  labels = tomap({ env = "dev" })

  scaling_config {
    desired_size = 2
    max_size     = 3
    min_size     = 1
  }

  update_config {
    max_unavailable = 1
  }

  depends_on = [
    aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy,
    aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy,
    aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly
  ]
}
